--- a/WhitbreadAssessment/WhitbreadAssessment/Base.lproj/Main.storyboard
+++ b/WhitbreadAssessment/WhitbreadAssessment/Base.lproj/Main.storyboard
@@ -26,14 +26,22 @@
         <!--Root View Controller-->
         <scene sceneID="VuI-5l-hDL">
             <objects>
-                <tableViewController clearsSelectionOnViewWillAppear="NO" id="cil-wS-jpl" sceneMemberID="viewController">
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="cil-wS-jpl" customClass="UIVenuesTableViewController" customModule="WhitbreadAssessment" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Nhi-4y-uod">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="gFW-5g-sh3">
+                            <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="cil-wS-jpl" id="ilV-w0-XZK"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Oqi-MD-KRa">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="136" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Oqi-MD-KRa" id="Rbx-Zj-vZC">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
@@ -47,8 +55,20 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="V0h-lg-0V4"/>
+                    <connections>
+                        <outlet property="placeSearchBar" destination="gFW-5g-sh3" id="xbx-sI-VcO"/>
+                        <outlet property="searchDisplayController" destination="ZQt-99-dj3" id="GX6-DG-va6"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yRg-8U-aaz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="ZQt-99-dj3">
+                    <connections>
+                        <outlet property="delegate" destination="cil-wS-jpl" id="5Yy-ag-c8C"/>
+                        <outlet property="searchContentsController" destination="cil-wS-jpl" id="esw-7t-PxI"/>
+                        <outlet property="searchResultsDataSource" destination="cil-wS-jpl" id="hWt-wA-Xzp"/>
+                        <outlet property="searchResultsDelegate" destination="cil-wS-jpl" id="Qzw-Eq-HCR"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="1341" y="-53"/>
         </scene>
