--- a/WhitbreadAssessment/WhitbreadAssessment/Base.lproj/Main.storyboard
+++ b/WhitbreadAssessment/WhitbreadAssessment/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                             </connections>
                         </searchBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Oqi-MD-KRa">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="venuesCellIdentifier" id="Oqi-MD-KRa">
                                 <rect key="frame" x="0.0" y="136" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Oqi-MD-KRa" id="Rbx-Zj-vZC">
