[DetailsViewController] Add the associated ID

--- a/WhitbreadAssessment/WhitbreadAssessment/Base.lproj/Main.storyboard
+++ b/WhitbreadAssessment/WhitbreadAssessment/Base.lproj/Main.storyboard
@@ -16,8 +16,23 @@
                     <view key="view" contentMode="scaleToFill" id="gqL-9r-ekd">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="idLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5WK-z5-ilD">
+                                <rect key="frame" x="272.5" y="290" width="55.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5WK-z5-ilD" firstAttribute="centerY" secondItem="gqL-9r-ekd" secondAttribute="centerY" id="A6N-mF-heu"/>
+                            <constraint firstItem="5WK-z5-ilD" firstAttribute="centerX" secondItem="gqL-9r-ekd" secondAttribute="centerX" id="R2N-Dv-wub"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="idLabel" destination="5WK-z5-ilD" id="Joo-ZC-ff7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="is4-nr-fU6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
